--- a/ros2_ws/my_python_pkg/package.xml
+++ b/ros2_ws/my_python_pkg/package.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0"?>
+<buildtool_depend>ament_python</buildtool_depend>
+<depend>rclpy</depend>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>my_python_pkg</name>
